fix broken e2e test on safari (#13)

--- a/source/app/components/phone-form/phone-form.styl
+++ b/source/app/components/phone-form/phone-form.styl
@@ -48,9 +48,9 @@
                         .dropdown-content
                             width 100%
                     .error-icon
-                        align-self flex-end
-                        margin-left 1px
-                        margin-bottom 13px
+                        position absolute
+                        bottom 15px
+                        right 0
 
         .actions
             display none
